[fix] align-items: start -> flex-start

--- a/src/pages/stack-page/stack-page.module.css
+++ b/src/pages/stack-page/stack-page.module.css
@@ -25,5 +25,5 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
 }
